--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "files.autoSave": "onFocusChange",
+  "files.autoSave": "onWindowChange",
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -11,18 +11,9 @@
     "**/node_modules": true
   },
   "explorer.openEditors.visible": 0,
-  "eslint.autoFixOnSave": true,
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    {
-      "language": "typescript",
-      "autoFix": true
-    },
-    {
-      "language": "typescriptreact",
-      "autoFix": true
-    }
-  ],
-  "terminal.integrated.rendererType": "canvas"
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+  "terminal.integrated.rendererType": "canvas",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
